# persoia-auth

./: .gitignore  LICENSE  README.md  persoia_auth.py  pyproject.toml
tests/: test_persoia_auth.py
